# robot-interface

./: .gitignore  .gitlab-ci.yml  .~lock.AutoMate_panel.csv#  AutoMate_panel.csv  AutoMate_panel.xlsx  AutoMate_panel.xlsx alias  Dockerfile  README.md  calibration.npz  pyproject.toml  requirements.txt  test_MLS.ipynb
.circleci/: config.yml
.github/workflows/: python-app.yml
Computer_vision/: cv_testing.py  distorsion_identification.py
Computer_vision/Image_processing/: MLS_matrix.py  cv_matrix.py  cv_orientation.py
Tests/: testfile.py
Tests/gui/: new_interface.py
Tests/logistics/: grid.py  non_pickable.py  positions.py
images/0023x0071/: Thumbs.db
images/009x007t1/: Thumbs.db
images/a/: a_info.txt
images/b/: b_info.txt
images/c/: c_info.txt
images/celsodemo/: celsodemo_info.txt
images/d/: d_info.txt
images/dec_5/: dec_5_info.txt
images/dec_5_1/: dec_5_1_info.txt
images/dec_5_2/: dec_5_2_info.txt
images/dec_5_full/: dec_5_full_info.txt
robot-env/: pyvenv.cfg
robotinterface/: camera_test_on_mac.py  camrea_test.py  experiment_helper.py  image_analysis_helper.py  job_library.py  launch.py  launch_image_analysis.bat  launch_image_analysis.py  main.py  new_launch_image_analysis.py  pictures_of_all_positions.bat  portocol.py  protocol.py  protocol_multi_experiment.py  protocol_one_experiment.py  take_picture.py  take_picture_each_positions.py  take_pictures_of_multi_experiments.bat  take_pictures_of_one_experiment - Shortcut.lnk  take_pictures_of_one_experiment.bat  test.py  testing.py  tests_fred.py
tests/: test_main.py
(+66 files in other folders)
