[tool.poetry]
name = "robotinterface"
version = "0.1.0"
description = ""
authors = ["Silvio Mueller <silvio.andreas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pyserial-asyncio = "0.6"
dynamixel-sdk = "^3.7.31"
numpy = "^1.20.0"
opencv-python = "^4.7.0.72"


[tool.poetry.group.dev.dependencies]
pytest = "7.3.1"
docker-compose = "1.29.2"
pytest-cov = "^4.0.0"
coverage = "^7.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
